v0.9.11 - fix for gutter tag warning from Material UI and changing the way I fix the overflow issue from 69c4968

--- a/ui/src/styles/containers/Posts.css
+++ b/ui/src/styles/containers/Posts.css
@@ -1,6 +1,5 @@
 .posts {
   padding: 2rem;
-  width: 100% !important;
 }
 
 .progress {
