--- a/ui/src/styles/index.css
+++ b/ui/src/styles/index.css
@@ -7,3 +7,7 @@ body {
 *, *:before, *:after {
     box-sizing: inherit;
 }
+
+#root {
+  overflow: hidden;
+}
